--- a/cv.html
+++ b/cv.html
@@ -6,10 +6,18 @@
   <title>CV | Rakesh Kumar, PhD</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
+  
+
 
 <body>
   <header>
     <h1>Curriculum Vitae</h1>
+<p>
+  <a href="Rakesh_Kumar_CV.pdf" target="_blank" class="button">
+    Download CV (PDF)
+  </a>
+</p>
+    
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
