--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <h1>Rakesh Kumar, PhD</h1>
     <p>Plant Biotechnology | CRISPR Genome Editing | Plant–Pathogen Interactions</p>
 
+<div class="social-links">
+  <a href="https://orcid.org/0000-0003-0811-5657" target="_blank">ORCID</a>
+  <a href="https://scholar.google.com/citations?user=K48eTSEAAAAJ&hl=en" target="_blank">Google Scholar</a>
+  <a href="https://www.linkedin.com/in/rakeshkpb87" target="_blank">LinkedIn</a>
+</div>
+
+
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
