--- a/cv.html
+++ b/cv.html
@@ -10,6 +10,13 @@
 <body>
   <header>
     <h1>Curriculum Vitae</h1>
+    
+<div class="social-links">
+  <a href="https://orcid.org/0000-0003-0811-5657" target="_blank">ORCID</a>
+  <a href="https://scholar.google.com/citations?user=K48eTSEAAAAJ&hl=en" target="_blank">Google Scholar</a>
+  <a href="https://www.linkedin.com/in/rakeshkpb87" target="_blank">LinkedIn</a>
+</div>
+    
 <p>
   <a href="Rakesh_Kumar_CV.pdf" target="_blank" class="button">
     Download CV (PDF)
