--- a/cv.html
+++ b/cv.html
@@ -19,8 +19,7 @@
     
 <p>
   <a href="Rakesh_Kumar_CV.pdf" target="_blank" class="button">
-    Download CV (PDF)
-  </a>
+    Download CV (PDF)</a>
 </p>
     
     <nav>
