--- a/cv.html
+++ b/cv.html
@@ -40,8 +40,8 @@
 
     <h2>Experience</h2>
     <ul>
-      <li>2024-Present: Postdoctoral Fellow at USDA-ARS, WRRC, Crop Improvement and Genetics Research Unit, Albany, CA, USA</li>
-      <li>2024-Present: Research Affiliate at Plant and Microbial Biology, UC Berkeley, CA, USA</li>
+      <li><strong>2024-Present: Postdoctoral Fellow at USDA-ARS, WRRC, Crop Improvement and Genetics Research Unit, Albany, CA, USA</strong></li>
+      <li><strong>2024-Present: Research Affiliate at Plant and Microbial Biology, UC Berkeley, CA, USA</strong></li>
       <li>2023-2024: Assistant Project Scientist at Plant and Microbial Biology, UC Berkeley, CA, USA</li>
       <li>2022-2023: Postdoctoral Fellow at Plant and Microbial Biology, UC Berkeley, CA, USA</li>
       <li>2019-2022: Postdoc Fellow at the Institute for Cereal Crops Research, Tel Aviv University, Israel</li>
