--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section class="content">
     <h2>Welcome</h2>
     <p>
-      I am a plant biotechnology researcher specializing in CRISPR-based genome editing in plants and molecular plant–pathogen interactions.
+      I am a plant biotechnology researcher specializing in CRISPR-based genome editing and molecular plant–pathogen interactions.
     </p>
 
     <p>
