--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   <section class="content">
     <h2>Welcome</h2>
     <p>
-      I am a plant biotechnology researcher specializing in CRISPR-based genome editing and molecular plant–pathogen interactions.
+      I am a plant biotechnology researcher specializing in CRISPR-based genome editing and molecular plant–pathogen interactions. I have extensive experience in CRISPR-Cas genome editing, plant transformation, and functional genomics.
     </p>
 
     <p>
-      My research focuses on improving disease resistance, understanding plant molecular responses, and developing innovative genome engineering approaches for crop improvement.
+      My research focuses on improving disease resistance, understanding plant molecular responses, and developing innovative genome engineering approaches for crop improvement. 
     </p>
 
     <a class="button" href="about.html">Learn More</a>
