--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
       My research focuses on improving disease resistance, understanding plant molecular responses, and developing innovative genome engineering approaches for crop improvement. 
     </p>
 
-    <a class="button" href="about.html">Learn More</a>
+    <h3>Research Interests</h3>
+    <ul>
+      <li>CRISPR/Cas genome editing in wheat</li>
+      <li>Plant–pathogen molecular interactions</li>
+      <li>Disease resistance pathways</li>
+      <li>Single-cell transcriptomics</li>
+      <li>Plant stress physiology & signaling</li>
+    </ul>
   </section>
 
   <footer>
