--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <h3>Research Interests</h3>
     <ul>
-      <li>CRISPR/Cas genome editing in wheat</li>
+      <li>CRISPR/Cas genome editing</li>
       <li>Plant–pathogen molecular interactions</li>
       <li>Disease resistance pathways</li>
       <li>Single-cell transcriptomics</li>
