Add CV download tracking

--- a/cv.html
+++ b/cv.html
@@ -28,9 +28,16 @@
 
   <section class="content">
 
-    <a href="Rakesh_Kumar_CV.pdf" target="_blank" class="button cv-download">
-    Download CV (PDF)
-    </a>
+<a href="Rakesh_Kumar_CV.pdf"
+   target="_blank"
+   class="button cv-download"
+   onclick="gtag('event', 'cv_download', {
+     'event_category': 'Documents',
+     'event_label': 'Rakesh Kumar CV'
+   });">
+   Download CV (PDF)
+</a>
+
 
     <h2>Education</h2>
     <ul>
@@ -63,6 +70,10 @@
   </section>
 
   <footer>
+<p>
+  <img src="https://visitorbadge.io/api/visitors?path=rakeshkpb87.github.io&label=Visitors&countColor=%23263759" />
+</p>
+
     © 2025 Rakesh Kumar, PhD
   </footer>
 </body>
