--- a/cv.html
+++ b/cv.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9M71H7EL72"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-9M71H7EL72');
+  </script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV | Rakesh Kumar, PhD</title>
@@ -70,9 +79,9 @@
   </section>
 
   <footer>
-<p>
-  <img src="https://visitorbadge.io/api/visitors?path=rakeshkpb87.github.io&label=Visitors&countColor=%23263759" />
-</p>
+    
+<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://rakeshkpb87.github.io&count_bg=%23263759&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=Visitors&edge_flat=false"/>
+
 
     © 2025 Rakesh Kumar, PhD
   </footer>
