Add external profile click tracking (Google Scholar, ORCID, LinkedIn)

--- a/cv.html
+++ b/cv.html
@@ -21,9 +21,31 @@
   <h1>Curriculum Vitae</h1>
 
   <div class="social-links">
-    <a href="https://orcid.org/0000-0003-0811-5657" target="_blank">ORCID</a>
-    <a href="https://scholar.google.com/citations?user=K48eTSEAAAAJ&hl=en" target="_blank">Google Scholar</a>
-    <a href="https://www.linkedin.com/in/rakeshkpb87" target="_blank">LinkedIn</a>
+
+<a href="https://scholar.google.com/citations?user=K48eTSEAAAAJ&hl=en"
+   target="_blank"
+   onclick="gtag('event', 'google_scholar_click', {
+       'event_category': 'External Links',
+       'event_label': 'Google Scholar Profile'
+   });">
+   Google Scholar
+</a>
+<a href="https://orcid.org/0000-0003-0811-5657"
+   target="_blank"
+   onclick="gtag('event', 'orcid_click', {
+       'event_category': 'External Links',
+       'event_label': 'ORCID Profile'
+   });">
+   ORCID
+</a>
+<a href="https://www.linkedin.com/in/rakeshkpb87"
+   target="_blank"
+   onclick="gtag('event', 'linkedin_click', {
+       'event_category': 'External Links',
+       'event_label': 'LinkedIn Profile'
+   });">
+   LinkedIn
+</a>
   </div>
 
   <nav>
